--- a/app/views/vehicles/_show.html.erb
+++ b/app/views/vehicles/_show.html.erb
@@ -1,28 +1,26 @@
 <div class="panel panel-default clear">
   <div class="panel-heading"><%= t '.car_details' %></div>
     <% if current_user %>
+      <% if user.vehicle.present? %>
+        <form class="form-horizontal" role="form">
+          <%=  user_form_control_static Vehicle.human_attribute_name("color"), user.vehicle.color %>
+          <%=  user_form_control_static Vehicle.human_attribute_name("vehicle_brand"), user.vehicle.vehicle_model.vehicle_brand.name %>
+          <%=  user_form_control_static Vehicle.human_attribute_name("vehicle_model"), user.vehicle.vehicle_model.name %>
+          <%=  user_form_control_static Vehicle.human_attribute_name("number_plate"), user.vehicle.number_plate %>
+          <%=  user_form_control_static Vehicle.human_attribute_name("air_condition"), user.vehicle.air_condition %>
+          <%=  user_form_control_static Vehicle.human_attribute_name("year"), user.vehicle.year %>
+        </form>
 
-    <% if user.vehicle.present? %>
-      <table class="table">
-
-        <tbody>
-          <%=  table_show_cell "Color", user.vehicle.color %>
-          <%=  table_show_cell "Number plate", user.vehicle.number_plate %>
-          <%=  table_show_cell "Air condition", user.vehicle.air_condition %>
-          <%=  table_show_cell "Year", user.vehicle.year %>
-          <%=  table_show_cell "Model", "#{user.vehicle.vehicle_model.vehicle_brand.name} - #{user.vehicle.vehicle_model.name}" %>
-        </tbody>
-      </table>
       
       <%= link_to (image_tag user.vehicle.image.url(:small)), user.vehicle.image.url(:normal) %> <br>
       <% if user == current_user %>
-        <%= link_to 'Edit car detail', edit_user_vehicles_path(user), class: "btn btn-primary" %>
+        <%= link_to t('.edit_car_detail_btn'), edit_user_vehicles_path(user), class: "btn btn-warning" %>
       <% end %>
 
     <% else %>
-      <p>There is no car registered.</p>
+      <p><%= t('.there_is_no_car_registered.') %></p>
       <% if user == current_user %>
-        <p><%= link_to "Enter your car details", new_user_vehicles_path(user) %></p>    
+        <p><%= link_to t('.enter_car_detail_btn'), new_user_vehicles_path(user), class: "btn btn-warning" %></p>    
       <% end %>
     <% end %>  <!-- if user.vehicle.present? -->
 
