--- a/app/views/profiles/show/_user_overview.html.erb
+++ b/app/views/profiles/show/_user_overview.html.erb
@@ -11,7 +11,7 @@
 				<%=  user_form_control_static t(".last_login_location"), @profile.user.last_login_location,"col-sm-4","col-sm-8" %>
 
 				<% if @profile.user.slug_updated %>
-					<%=  user_form_control_static "Url", link_to_profile(@profile.user) %>
+					<%=  user_form_control_static t(".url"), link_to_profile(@profile.user) %>
 				<% end %>
 
 			<% else %>
