--- a/app/views/shared/_users_list.html.erb
+++ b/app/views/shared/_users_list.html.erb
@@ -14,7 +14,7 @@
 					<%= link_to user.name, profile_url(user) ,class: "user-name" %>
 
 					<span class="followers-number small">
-						(<%= pluralize(user.followers.size, 'Follower')  %>)
+						( <%= t('followers', count: user.followers.size) %> )
 					</span> 
 
 					<span class="<%= "online" if user.online? %> ">
