--- a/app/views/homes/show.html.erb
+++ b/app/views/homes/show.html.erb
@@ -1,10 +1,11 @@
 <div id="home">
-	<div id="search_form" class="">
+	<div id="search_form" class="col-md-6">
 		<%= image_tag(IMAGES_PATH+"passenger.png", class: "passenger")	%>
 		<%= render partial: 'search_form' %>	
 	</div>
 
 	<div class="col-md-6">
+			<%= image_tag(IMAGES_PATH+"passenger_man.png", class: "passenger passenger_man")	%>
 		<div class="frame">
 			<div class="title">
 				<h4>
