--- a/app/assets/stylesheets/homes.css.scss
+++ b/app/assets/stylesheets/homes.css.scss
@@ -1,19 +1,28 @@
 
 $green: #b5c023;
 #home{		
-	.passenger_man{
-		position: absolute;
-		left: -67px;
-		top: -52px;
-		z-index: 10;
+	#insert_trip{
+		position: relative;	
+		.title h4{
+			padding-left: 75px;
+			padding-bottom: 7px;
+		}	
+		.passenger_man{
+			position: absolute;
+			left: -12px;
+			top: -19px;
+			z-index: 10;
+			width: 114px;
+		}
 	}
 	#search_form{
 		position: relative;
 		.passenger{
 			position: absolute;
-			top: -49px;
-			right: -59px;
+			top: -14px;
+			right: -5px;
 			z-index: 10;
+			width: 64px;
 		}
 		// background: $green;
 		// border: 2px solid #C3D329;
