--- a/app/views/homes/show.html.erb
+++ b/app/views/homes/show.html.erb
@@ -1,20 +1,11 @@
 <div id="home">
 	<div id="search_form" class="col-md-6">
 		<%= image_tag(IMAGES_PATH+"passenger.png", class: "passenger")	%>
-		<%= render partial: 'search_form' %>	
+		<%= render partial: 'trip_search' %>	
 	</div>
 
-	<div class="col-md-6">
+	<div id="insert_trip" class="col-md-6">
 			<%= image_tag(IMAGES_PATH+"passenger_man.png", class: "passenger passenger_man")	%>
-		<div class="frame">
-			<div class="title">
-				<h4>
-					<strong class= "lead"><%= t('.welcome_message') %></strong>
-				</h4>
-			</div>
-			<div class="inner">
-			  <%= render 'devise/sessions/form' %>
-			</div>			
-		</div>
+		<%= render 'trip_insert' %>	
 	</div>
 </div>
