--- a/app/views/application/_error_messages.html.erb
+++ b/app/views/application/_error_messages.html.erb
@@ -2,11 +2,11 @@
   <div class="panel panel-danger">
   	<div class="panel-heading">
 	  	<h3 class="panel-title">
-	  		<%= pluralize(object.errors.size, "error") %> prohibited this record from being saved
+	  		<%= t('.title') %> <!-- pluralize(object.errors.size, "error") -->
 	  	</h3>  		
   	</div>
   	<div class="panel-body">
-	    <p>There were problems with the following fields:</p>
+	    <p><%= t('.description') %> </p>
 	    <ul>
 	    <% object.errors.full_messages.each do |msg| %>
 	      <li><%= msg %></li>
