--- a/app/views/layouts/application_user.html.erb
+++ b/app/views/layouts/application_user.html.erb
@@ -1,6 +1,9 @@
   <%= render 'head' %>
 
   <%= render 'navbar' %>
+	<% if current_user.try(:is_admin?) %>
+  	<%= render 'admin_navbar' %>		
+	<% end %>
 
   <div  id="userContainer" class="container">	
       <%= yield %>  
