--- a/app/views/application/_admin_navbar.html.erb
+++ b/app/views/application/_admin_navbar.html.erb
@@ -4,12 +4,13 @@
       <ul class="sidebar-nav">
         <li class="sidebar-brand"><%= link_to "Admin Panel", root_path %></li>
         <li> <%= link_to "Users",  users_path %></li>
-        <li> <%= link_to "States", states_path %></li>
         <li> <%= link_to "Trips",  trips_path %></li>
-        <li> <%= link_to "vehicle models", vehicle_models_path %></li>
-        <li> <%= link_to "vehicle brands", vehicle_brands_path %></li>
-        <li> <%= link_to "countries", countries_path %></li>
-        <li> <%= link_to "bookings", bookings_path %></li>
+        <li> <%= link_to "Vehicle Models", vehicle_models_path %></li>
+        <li> <%= link_to "Vehicle Brands", vehicle_brands_path %></li>
+        <li> <%= link_to "Cities", cities_path %></li>
+        <li> <%= link_to "States", states_path %></li>
+        <li> <%= link_to "Countries", countries_path %></li>
+        <li> <%= link_to "Bookings", bookings_path %></li>
       </ul>
     </div>
   </div>
