SEO: site name and slogan and logo for each language

--- a/app/assets/stylesheets/costum.scss.css
+++ b/app/assets/stylesheets/costum.scss.css
@@ -60,6 +60,12 @@ body{
  
 #siteLogo{
 	margin: 25px 15px 15px;
+  width: 256px;
+  height: 55px;
+
+}
+#siteLogo #logo, #siteLogo #slogan{
+  text-indent: 7272px ;
 }
 
 .navbar{
