--- a/app/assets/stylesheets/costum.scss.css
+++ b/app/assets/stylesheets/costum.scss.css
@@ -46,6 +46,7 @@ body{
 @media (min-width: 750px) {
     #siteHeader{
         background: url("https://s3-eu-west-1.amazonaws.com/hamsafaryab.production/static_files/images/headerBG.gif") 10px bottom no-repeat;
+        overflow: hidden;
         height: 100px;
         border-bottom: 2px solid #91a022;
         margin-bottom: 15px;
@@ -65,7 +66,9 @@ body{
 
 }
 #siteLogo #logo, #siteLogo #slogan{
-  text-indent: 7272px ;
+  text-indent: -7272px ;
+    width: 256px;
+  height: 55px;
 }
 
 .navbar{
