--- a/app/views/search_subtrips/search.html.erb
+++ b/app/views/search_subtrips/search.html.erb
@@ -1,22 +1,29 @@
+<%#= request.remote_ip %>
+<%#= Geocoder.search("77.182.200.130").first.try(:latitude) %>
 <%= render partial: 'search_form', locals:{search_mode: @search_mode, search_subtrip: @search_subtrip  } %>
 
-<div class="sidebar col-md-3">
-	<div class="panel panel-default ">
-	  <div class="panel-heading">
-	    <h3 class="panel-title">Search restrictions</h3>
-	  </div>
-	  <div class="panel-body">
-	    Content
-	  </div>
-	</div>	
-</div>
+<div id="search_subtrips">
+	<div class="sidebar col-sm-2">
+		<div class="panel panel-default ">
+		  <div class="panel-heading">
+		    <h3 class="panel-title">Search restrictions</h3>
+		  </div>
+		  <div class="panel-body">
+		    Content
+		  </div>
+		</div>	
+	</div>
 
-<div class="content col-md-9">
-	<% if @subtrips && @subtrips.any? %>
-		<%= render partial: 'subtrips', locals:{subtrips: @subtrips, search_subtrip: @search_subtrip  } %>
-	<% elsif @search_subtrip.errors.any? %>
-		<%= error_messages_for(@search_subtrip) %>
-	<% else %>
-		<p>No record with this condition. please try again.</p>
-	<% end %>
+	<div class="content col-sm-10">
+		<% if @subtrips && @subtrips.any? %>
+
+			<%= render @subtrips %>	
+
+		<% elsif @search_subtrip && @search_subtrip.errors.any? %>
+			<%= error_messages_for(@search_subtrip) %>
+		<% else %>
+			<p>No record with this condition. please try again.</p>
+		<% end %>
+	</div>
+	<%= will_paginate @subtrips %>
 </div>
