--- a/app/assets/stylesheets/search_subtrips.css.scss
+++ b/app/assets/stylesheets/search_subtrips.css.scss
@@ -164,10 +164,12 @@ $btn-primary-darker:  darken($btn-primary-color, 8%);
 				margin-top: 0px;
 			}
 			.car{
-				font-size: 1em;
+				font-size: 0.9em;
 				position: absolute;
 				bottom: -8px;
 				margin: 0;
+				color: #9B9B9B;
+				font-family: fantasy;
 			}
 		}
 		.user-info{
