--- a/app/views/trips/_form_new.html.erb
+++ b/app/views/trips/_form_new.html.erb
@@ -1,4 +1,4 @@
-<div id="new_trip_form" class="row col-sm-8">
+<div id="new_trip_form" class="row col-md-8">
 <div class="panel panel-default">
   <div class="panel-heading"><%= t('.title') %></div>
   <div class="panel-body">
