--- a/app/views/trips/show/_show.html.erb
+++ b/app/views/trips/show/_show.html.erb
@@ -1,6 +1,3 @@
-
-	
-
 <div class="panel-body ">	
 	<div class="col-sm-4 panel-body">
 		<strong>
@@ -16,6 +13,7 @@
 					<th></th>
 					<th><%= t 'city' %></th>
 					<th><%= t 'at' %></th>
+					<th><%= t 'trips.subtrip_fields.on' %></th>
 				</tr>
 			</thead>
 			<tbody>
@@ -23,6 +21,9 @@
 					<th><%= t 'from' %></th>
 					<td><%= @trip.first_city.origin.name %></td>
 					<td><%= @trip.first_city.date_time.to_s(:time) %></td>
+					<td>
+						<%= @trip.first_city.jyear %>-<%= @trip.first_city.jmonth %>-<%= @trip.first_city.jday %>
+					</td>
 				</tr>
 
 				<% @trip.via_cities_obj.each do |c| %>
@@ -30,6 +31,9 @@
 						<th><%= t 'via' %></th>
 						<td><%= c.origin.name%></td>
 						<td><%= c.date_time.to_s(:time) %></td>
+					<td>
+						<%= c.jyear %>-<%= c.jmonth %>-<%= c.jday %>
+					</td>
 					</tr>
 				<% end %>
 
@@ -37,6 +41,9 @@
 					<th><%= t 'to' %></th>
 					<td><%= @trip.last_city.destination.name %></td>
 					<td><%= @trip.subtrips.last.date_time.to_s(:time) %></td>
+					<td>
+						<%= @trip.subtrips.last.jyear %>-<%= @trip.subtrips.last.jmonth %>-<%= @trip.subtrips.last.jday %>
+					</td>
 				</tr>
 			</tbody>
 		</table>	
