improve subtrip show layout until complete path description

--- a/app/views/subtrips/show.html.erb
+++ b/app/views/subtrips/show.html.erb
@@ -1,15 +1,25 @@
-<table class="table">
-  <tbody>
-  <h3>Subtrip detail</h3>
-		<%= table_show_cell "On"		,jalali_date(@subtrip.date_time) %>
-		<%= table_show_cell "At"		,jalali_time(@subtrip.date_time) %>		
-		<%= table_show_cell "From", print_cities_name(@subtrip.trip.first_city, @subtrip) %> 
-		<% @subtrip.trip.via_cities_obj.each do |s| %>
-			<%= table_show_cell "Via", print_cities_name(s, @subtrip) %> 
-		<% end %>
-		<%=  table_show_cell "To", print_last_city_name(@subtrip.trip.last_city, @subtrip) %>
-		<%= table_show_cell "Price" ,@subtrip.price %>
-  </tbody>
-</table>
+<div class="col-sm-7">
+	<div class="panel panel-default ">
+		<div class="panel-heading">
+			<h2>
+				<%= @subtrip.destination.name %>
+				<span class="arrow-ie">&larr;</span> 
+				<%= @subtrip.origin.name %>
+				<% if @subtrip.price %>
+					<strong class="pull-<%= lang_other_side  %>">
+						<%= t 'currency', amount: @subtrip.price %>
+					</strong>
+				<% end %>
+			</h2>
+		</div>
 
-<%= render 'seats_form' %>
+	  <div class="panel-body">
+	  	<p></p>
+	  </div>
+		<%= render 'subtrips/show/route_overview' %>
+	  <div class="panel-body">
+
+	  </div>	
+	</div>
+	<%= render 'seats_form' %>
+</div>
