--- a/app/assets/stylesheets/subtrips.css.scss
+++ b/app/assets/stylesheets/subtrips.css.scss
@@ -1,3 +1,8 @@
 // Place all the styles related to the Subtrips controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.orogin-destination h3{
+	margin-top: 0;
+	display: inline;
+}
